# scistream-proto

./: .gitignore  .gitlab-ci.yml  .gitmodules  404.html  README.md  Vagrantfile  index.html  mkdocs.yml  pyproject.toml  requirements.txt  scistream.proto  search.html
LEGACY-S2DS/: s2ds.py
S2CS/: README.md  appcontroller.py  models.py  s2cs-new.py  s2cs.py  s2ds.py  s2uc-new.py  scistream_pb2.py  scistream_pb2_grpc.py  utils.py
S2DS/: README.md  s2ds.py
S2UC/: README.md  s2uc.py  test_rel.json  test_req.json
about/Changelog/: index.html
demo/: README.md  app.py  requirements.txt
demo/templates/: index.html
deploy/: Dockerfile  playbook.yml  scistream.yml  setup.sh
dev-guide/: index.html
docs/: README.md  auth2.md  backlog.md  index.md  introduction.md  quickstart.md  scistream.md
docs/about/: Changelog.md
docs/concepts/: introduction.md  understanding.md
docs/dev-guide/: README.md
docs/figures/: SciStream_Deleria.drawio  SciStream_protocol.drawio  auth.rest  suli2021-SciStream.drawio
docs/getting-started/: installation.md  quickstart.md
docs/guides/: auth.md  auth2.md  authentication.md  deploy.md  dev.md  dev2.md  developer-guide.md  tutorials.md  user-guide.md  user.md
docs/reference/: changelog.md  faq.md  troubleshooting.md
docs/s/: Changelog.md  README.md
docs/scistream/: Changelog.md  README.md
docs/user-guide/: README.md  auth.md
figures/: suli2021-SciStream (Wide).drawio
misc/: README.md  pub_bench.py  sub_bench.py
quickstart/: index.html
reference_specs/: scistream-protocol-final.txt  scistream-protocol-improved.txt
search/: search_index.json
src/: appcontroller.py  haproxy.cfg.j2  nginx.conf  nginx.conf.j2  s2cs.py  s2ds.py  s2uc.py  stunnel.conf.j2  utils.py
src/proto/: scistream.proto  scistream_pb2.py  scistream_pb2_grpc.py
src/s2ds/: docker.py  haproxy.cfg  nginx.conf.j2  other.py  s2ds.py  stunnel.conf.j2  subproc.py  utils.py
test/: context.py  send_hello_mocked.py  test_mocked.py  test_s2cs.py
tests/: pub_bench.py  sub_bench.py  test_auth.py  test_s2cs.py  test_s2ds.py
user-guide/: index.html
user-guide/auth/: index.html
utils/: README.md  send_hello.py  test_client.py  user.py
