[tool.poetry]
name = "scistream-proto"
version = "1.2.0"
description = "Scistream securely allows participating facilities to make their resources available through a programmatic interface"
authors = ["Flavio Castro <fcastro@anl.gov>", "Joaquin Chung <chung@anl.gov>", "AJ Wisniewski <idk@anl.gov>"]
readme = "docs/quickstart.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
s2uc = "src.s2uc:cli"
appctrl = "src.appcontroller:cli"
s2cs = "src.s2cs:main"


[tool.poetry.dependencies]
python = "^3.9"
optparse-pretty = "^0.1.1"
grpcio = "^1.51.3"
grpcio-tools = "^1.51.3"
grpclib = "^0.4.3"
click = "^8.1.3"
fire = "^0.5.0"
grpcio-testing = "^1.53.0"
pytest = "^7.2.2"
pytest-cov = "^4.1.0"
pytest-timeout = "^2.1.0"
protobuf = "^4.22.3"
pyzmq = "^25.0.2"
globus-cli = "^3.15.0"
docker = "^6.1.3"
jinja2 = "^3.1.2"
globus-action-provider-tools = "^0.14.0"
requests = "2.31.0"
pylint = "^3.2.6"
black = "^24.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
